# intellij-rust-demos

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
associated_type_defaults/: Cargo.toml
associated_type_defaults/src/: lib.rs
external_lib_navigation/: Cargo.toml
external_lib_navigation/src/: lib.rs
src/: lib.rs
