[workspace]
resolver = "2"
members = [
    "associated_type_defaults",
    "external_lib_navigation",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Nikolai Golub <nikolay.v.golub@gmail.com>"]
repository = "https://github.com/citizen-stig/intellij-rust-demos/"



[workspace.dependencies]
anyhow = "1.0.72"
borsh = "0.10.3"