[package]
name = "intellij-demos-external-lib-navigation"
description = "Example for navigation issue"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true


[dependencies]
intellij-demos-associated-type-defaults = { path = "../associated_type_defaults", version = "0.1" }
